--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "translate": "^2.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
