--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "crypto-js": "^4.2.0",
+    "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
@@ -18,6 +21,8 @@
     "translate": "^2.0.2"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.3",
+    "@types/date-fns": "^2.6.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
